--- a/less/blocks/guards-content.less
+++ b/less/blocks/guards-content.less
@@ -93,6 +93,15 @@
     }
   }
 
+  a {
+    color: #0DB5DA;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   @media screen and @tablet-width {
     padding-top: 0;
 
