Mob. vers - complete

--- a/less/blocks/follow-us.less
+++ b/less/blocks/follow-us.less
@@ -85,11 +85,7 @@
   }
 }
 
-/* .follow-us .main-toggler {
-
-} */
-
-.follow-us .main-toggler__toggle {
+/* .follow-us .main-toggler__toggle {
 
   &--castle {
     padding-right: 16.055%;
@@ -109,3 +105,4 @@
     color: @white;
   }
 }
+ */
