--- a/less/blocks/guards-content.less
+++ b/less/blocks/guards-content.less
@@ -2,8 +2,8 @@
   padding-bottom: 75px;
 
   @media screen and @tablet-width {
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
   }
 
   @media screen and @desktop-width {
@@ -11,7 +11,44 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    align-content: flex-start; */
+    align-conten t: flex-start; */
+  }
+}
+
+.guards-content__title {
+  margin-bottom: 45px;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.9px;
+  color: @title-color;
+
+  @media screen and @tablet-width {
+    margin-bottom: 60px;
+    font-size: 26px;
+  }
+
+  @media screen and @desktop-width {
+    margin-bottom: 70px;
+    font-size: 37px;
+    // transform: translateX(-20px);
+  }
+}
+
+.guards-content__intro {
+  margin-bottom: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  color: @text-color;
+
+  @media screen and @tablet-width {
+    margin-bottom: 60px;
+    font-size: 20px;
+  }
+
+  @media screen and @desktop-width {
+    margin-bottom: 70px;
+    font-size: 24px;
   }
 }
 
@@ -49,37 +86,58 @@
 }
 
 .guards-content__text-block {
-  padding-top: 42px;
-  padding-bottom: 30px;
+  margin-bottom: 60px;
 
-  h2 {
-    margin-bottom: 18px;
-    font-size: 20px;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 0.9px;
+  h3 {
+    margin-bottom: 20px;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 700;
     color: @title-color;
 
     @media screen and @tablet-width {
-      margin-left: 40px;
-      margin-bottom: 35px;
-      font-size: 24px;
+      margin-bottom: 30px;
+      font-size: 22px;
     }
 
     @media screen and @desktop-width {
-      margin-bottom: 105px;
-      font-size: 42px;
-      transform: translateX(-20px);
+      margin-bottom: 40px;
+      font-size: 26px;
     }
   }
 
-
-  p {
-    margin-bottom: 15px;
+  blockquote p {
+    margin-bottom: 40px;
+    margin-top: 35px;
+    padding-left: 30px;
+    font-size: 16px;
+    font-weight: 700;
+    color: @text-color;
 
     @media screen and @tablet-width {
-      margin-left: 60px;
+      font-size: 20px;
+    }
+
+    @media screen and @desktop-width {
+      font-size: 24px;
+    }
+  }
+
+  p {
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.8;
+    color: @text-color;
+
+    @media screen and @tablet-width {
+      margin-bottom: 15px;
       font-size: 18px;
+    }
+
+    @media screen and @desktop-width {
+      margin-bottom: 20px;
+      font-size: 20px;
     }
   }
 
@@ -94,18 +152,16 @@
   }
 
   a {
-    color: #0DB5DA;
-    text-decoration: none;
+    text-decoration: underline;
 
     &:hover {
-      text-decoration: underline;
+      font-weight: 700;
     }
   }
 
   @media screen and @tablet-width {
-    padding-top: 0;
 
-    &--first {
+    /* &--first {
       margin-left: 0;
     }
 
@@ -123,11 +179,11 @@
       padding-left: 0!important;
       padding-right: 0!important;
       .clearfix();
-    }
+    } */
   }
 
   @media screen and @desktop-width {
-    width: 600px;
+    /* width: 600px;
     margin: 0;
     padding-bottom: 60px;
 
@@ -149,11 +205,20 @@
       position: relative;
       margin-left: 105px;
       padding-top: 70px;
-    }
+    } */
+  }
+}
+
+.guards-content__img-wrapper {
+  margin-bottom: 60px;
+
+  &--sibling-link {
+    margin-bottom: 25px;
   }
 }
 
 .guards-content__img {
+  margin: 0;
   overflow: hidden;
 
   img {
@@ -163,8 +228,10 @@
   }
 
   @media screen and @tablet-width {
+    padding-left: 20px;
+    padding-right: 20px;
 
-    &--first {
+    /* &--first {
       float: left;
       width: 290px;
       height: 435px;
@@ -181,7 +248,7 @@
       margin-bottom: 30px;
       margin-left: auto;
 
-    }
+    } */
   }
 
   @media screen and @desktop-width {
@@ -203,7 +270,58 @@
 
 }
 
-.guards-content__readmore {
+.guards-content__figcaption {
+  margin-left: 20px;
+  margin-right: 20px;
+  // padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  color: @text-color;
+  border-bottom: 1px solid #c4c4c4;
+
+  @media @tablet-width {
+    font-size: 16px;
+  }
+
+  @media @desktop-width {
+    font-size: 18px;
+  }
+}
+
+.guards-content__sibling-top {
+  display: flex;
+  justify-content: space-between;
+  align-content: flex-end;
+  margin-bottom: 25px;
+}
+
+.guards-content__sibling {
+  display: block;
+  // padding-right: 30px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.guards-content__toggle {
+  display: block;
+  margin-right: 75px;
+  margin-top: 3px;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.guards-content__name {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* .guards-content__readmore {
   margin-left: 40px;
 
   @media screen and @tablet-width {
@@ -216,4 +334,4 @@
     bottom: 132px;
     left: 110%;
   }
-}
+} */
