--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,8 +1,8 @@
 .page-header {
-  min-height: 570px;
+  min-height: 300px;
 
   @media screen and @tablet-width {
-    min-height: 370px;
+    // min-height: 370px;
     margin-bottom: 40px;
   }
 
@@ -54,7 +54,7 @@
   min-height: 200px;
   overflow: hidden;
 
-  &::after {
+  /* &::after {
     position: absolute;
     top: 0;
     left: 0;
@@ -62,25 +62,24 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(15deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.1) 60%, transparent);
-  }
+  } */
 
 }
 
 .page-header__img {
   display: block;
-  width: 100%;
-  height: 500px;
-  // width: auto;
+  width: auto;
+  height: 100%;
   object-fit: cover;
 
   @media screen and @tablet-width {
-    // height: 450px;
+    width: 100%;
     height: auto;
   }
 
   @media screen and @desktop-width {
     // height: 665px;
-    height: auto;
+    // height: auto;
   }
 
 }
@@ -133,7 +132,8 @@
 
   @media screen and @desktop-width {
     bottom: 85px;
-    font-size: 42px;
+    font-size: 30px;
+    // background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -157,37 +157,37 @@
 
   position: absolute;
   left: 0;
-  bottom: 65px;
+  bottom: 95px;
   padding-left: 20px;
   padding-right: 25px;
   letter-spacing: 1px;
-  text-transform: uppercase;
   color: @white;
 
   @media screen and @tablet-width {
-    bottom: 60px;
     padding: 0 60px;
     font-size: 25px;
   }
 
   @media screen and @desktop-width {
-    bottom: 85px;
+    bottom: 135px;
     padding: 0 105px;
     font-size: 42px;
   }
 }
 
 .page-header__guards {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   font-size: 22px;
   font-weight: 900;
   text-transform: uppercase;
 
   @media screen and @tablet-width {
-    font-size: 28px;
+    margin-bottom: 10px;
+    font-size: 32px;
   }
 
   @media screen and @desktop-width {
+    margin-bottom: 5px;
     font-size: 42px;
   }
 }
@@ -198,10 +198,10 @@
   font-weight: 700;
 
   @media screen and @tablet-width {
-    font-size: 24px;
+    font-size: 22px;
   }
 
   @media screen and @desktop-width {
-    font-size: 38px;
+    font-size: 26px;
   }
 }
