--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -4,6 +4,7 @@ html {
   font-weight: 400;
   color: @text-color;
   background-color: @white;
+  box-sizing: border-box;
 }
 
 body {
@@ -14,7 +15,7 @@ body {
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 ul,
