--- a/less/style.less
+++ b/less/style.less
@@ -24,7 +24,7 @@
 @import "blocks/follow-us.less";
 @import "blocks/social-links.less";
 @import "blocks/guards-content.less";
-@import "blocks/guards-content-2.less";
+// @import "blocks/guards-content-2.less";
 @import "blocks/guards-gallery.less";
 @import "blocks/about-us.less";
 @import "blocks/news.less";
