--- a/less/global/container.less
+++ b/less/global/container.less
@@ -5,9 +5,9 @@
   // outline: 1px solid red;
 
   @media @desktop-width {
-    //width: 1280px;
     width: 1260px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
