--- a/less/swiper/core.less
+++ b/less/swiper/core.less
@@ -1,7 +1,8 @@
 .swiper-container,
 .swiper-container-main,
 .swiper-container-nav,
-.swiper-container--galery {
+.swiper-container--galery,
+.swiper-container-content {
   width: auto;
   margin-left: auto;
   margin-right: auto;
