--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -33,6 +33,8 @@
 
   @media screen and @tablet-width {
     padding-top: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   @media screen and @desktop-width {
@@ -53,15 +55,10 @@
   }
 
   @media screen and @tablet-width {
-    width: 74%;
     height: 340px;
-    margin: 0 auto;
-    transform: translateX(30px);
   }
 
   @media screen and @desktop-width {
-    width: 925px;
     height: 580px;
-    transform: translateX(50px);
   }
 }
