--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -2,6 +2,7 @@ html {
   font-family: "GothamPro", "Arial", sans-serif;
   font-size: 15px;
   font-weight: 400;
+  line-height: 1.35;
   color: @text-color;
   background-color: @white;
   box-sizing: border-box;
@@ -143,6 +144,20 @@ img {
   &--slider-right {
     @media screen and @tablet-width {
       color: @white;
+    }
+  }
+
+  &.guards-content__toggle {
+
+    @media @desktop-width {
+
+      &::after {
+        top: 11px;
+      }
+
+      &::before {
+        top: 7px;
+      }
     }
   }
 }
