--- a/less/blocks/copyrights.less
+++ b/less/blocks/copyrights.less
@@ -102,6 +102,14 @@
   }
 }
 
+.copyrights__findin-link {
+  color: @white;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .copyrights__link {
   display: block;
   width: 140px;
