--- a/less/blocks/join-up.less
+++ b/less/blocks/join-up.less
@@ -3,7 +3,7 @@
   .text-hide();
   position: fixed;
   z-index: 50;
-  bottom: 0;
+  bottom: -1px;
   right: 0;
   display: block;
   padding: 9px;
@@ -15,9 +15,6 @@
   }
 
   @media screen and @tablet-width {
-    position: fixed;
-    z-index: 50;
-    bottom: 0;
     right: 20px;
     display: flex;
     justify-content: center;
