--- a/less/style.less
+++ b/less/style.less
@@ -24,7 +24,6 @@
 @import "blocks/follow-us.less";
 @import "blocks/social-links.less";
 @import "blocks/guards-content.less";
-// @import "blocks/guards-content-2.less";
 @import "blocks/guards-gallery.less";
 @import "blocks/about-us.less";
 @import "blocks/news.less";
@@ -42,3 +41,5 @@
 @import "swiper/scrollbar.less";
 @import "swiper/swiper.less";
 @import "swiper/zoom.less";
+
+@import "featherlight/featherlight.min.less";
