--- a/less/swiper/navigation.less
+++ b/less/swiper/navigation.less
@@ -12,10 +12,15 @@
     background-size: 27px 44px;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 0.35;
     &.swiper-button-disabled {
         opacity: 0.35;
         cursor: auto;
         pointer-events: none;
+    }
+
+    &:hover {
+      opacity: 0.75;
     }
 }
 .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
